# redisigned-handwriting

./: .dockerignore  .gitignore  Dockerfile  PREVIEW_SYSTEM_IMPLEMENTATION.md  README.md  TESTING_AND_PERFORMANCE.md  benchmark_performance.py  fly.toml  pyproject.toml  run.py  run_tests.py
.github/workflows/: deploy.yml
src/handwriting_transcription/: __init__.py  app.py  config.py  error_handlers.py  exceptions.py  font_manager.py  models.py  pdf_generator.py  preview_generator.py  rate_limiter.py  text_processor.py  validators.py
src/handwriting_transcription/static/css/: style.css
src/handwriting_transcription/static/js/: app.js
src/templates/: base.html  index.html
tests/: conftest.py  test_font_manager.py  test_integration.py  test_pdf_generator.py  test_rate_limiter.py  test_text_processor.py
