[project]
name = "transcription-game"
version = "0.1.0"
description = "Handwriting practice sheet generator web application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=2.3.3",
    "reportlab>=4.0.4",
    "pillow>=10.0.1",
    "python-dotenv>=1.0.0",
    "fonttools>=4.42.1",
    "requests>=2.32.5",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-flask>=1.2.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "coverage>=7.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/handwriting_transcription",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80"
]

[tool.coverage.run]
source = ["src/handwriting_transcription"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*"
]

[dependency-groups]
dev = [
    "coverage>=7.10.6",
    "psutil>=7.0.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-flask>=1.3.0",
    "pytest-mock>=3.15.0",
]
